app/assets/stylesheets/maps.css.scss
/* Variables */
$sidebar-width: 30%;
$sidebar-min-width: 400px;
$sidebar-padding: 15px;

$sidebar-title-height: 87px;
$sidebar-title-padding: 15px;

                        // bootstrap                           // visual tweak
$sidebar-header-height: 50px         + $sidebar-title-height + 1;



$subtle-grey: #e5e5e5;

/* Mixins */
@mixin sidebar-padding() {
	padding-left: $sidebar-padding;
	padding-right: $sidebar-padding;
}

/* Global */
html, body {
	width: 100%;
	height: 100%;
}

/* Map pane */
#knitter-map-pane {
	float: left;

	width: 100% - $sidebar-width;

	/* WARNING: calc does not work in all browsers. */
	max-width: calc(100% - #{$sidebar-min-width});
	height: 100%;
}

/* Sidebar with map details */
.sidebar {
	position: relative;
	float: left;

	height: 100%;
	width: $sidebar-width;
	min-width: $sidebar-min-width;

	font-family: 'Junction Light';

	/* Override Bootstrap */
	.navbar { margin-bottom: 0; }

	.sidebar-container { 
		width: 100%; 
		height: 100%;
		position: relative;
	}

	.sidebar-title {
		@include sidebar-padding();
		border-bottom: 1px solid $subtle-grey;
		height: $sidebar-title-height;
		padding-bottom: $sidebar-title-padding;
		padding-top: $sidebar-title-padding;		
		h3 { margin: 0; }
	}

	.sidebar-content {
		position: absolute;
		right: 0;
		left: 0;
		bottom: 0;
		height: calc(100% - #{$sidebar-header-height});
		overflow-y: scroll;
		overflow-x: hidden;

		@include sidebar-padding();
	}

	.map-title-examples { list-style-type: none; }
	.new-map { height: 100%; overflow: hidden; }
	.sidebar-only { display: block; }
	.fullscreen-only { display: none; }
	#latlngs {
		width: 100%;
		.form-group {
			width: 47%;
			float: left;
			margin-right: 10px;
			input { width: 80%; }	
		}				
	}
	.label {
		margin-left: 2px;
		margin-right: 2px;
		a {
			color: #000;
			font-weight: normal;
		}
	}
	.tab-content {
		height: 70%;
		overflow-y: auto;
	}
	table {
		width: 100%;
		margin-bottom: 5px;
	}
	.sidebar-tabs {
		margin-top: 20px;
		height: 100%;
		overflow-y: auto;
	}
	textarea {
		height: 80px;
		margin-bottom: 15px;
	}
	.map-detail-label {
		color: #999;
	}
}

#comments {
	.comment-header {
		background-color: #f2f2f2;
		padding: 10px;
		border-radius: 5px;
		border: 1px solid #d4d4d4;
		margin-bottom: 5px;
	}
	.comment-body { margin-bottom: 5px; }	
}


/* 
 * Override Bootstrap styles for when the nav is contained in the sidebar. 
 * This is to ensure that the navbar maintains a fixed height,
 * regardless of screen size, so that the top offset for .sidebar-wrap doesn't change.
 */
.sidebar-navbar-nav {
	float: left;
	margin: 0;

	li {
		float: left;
		a {
			padding-top:    15px;
			padding-bottom: 15px;
		}
	}
}

.sidebar-navbar-right {
	float: right !important;
	margin-right: -15px;
}
	
.tab-pane { padding-top: 10px; }

.public-lab-primary button { background-color: #f8e4e4; }

